--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "axios": "^0.27.2",
     "expo": "^44.0.0",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.17.0",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.1",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
